<resources>
    <string name="app_name">Exercice 5 6 7</string>
    <string name="nom">Nom</string>
    <string name="HintNom">Saisi le nom</string>
    <string name="prenom">Prenom</string>
    <string name="HintPrenom">Saisi le prenom</string>
    <string name="age">Age</string>
    <string name="HintAge">Saisi le age</string>
    <string name="skill">Competence</string>
    <string name="Hintskill">Saisi le competence</string>
    <string name="nTel">NuméroDeTelephone</string>
    <string name="HintTel">Saisi le numero de telephone</string>
    <string name="engister">Engister</string>
<string name="appel">Appeler</string>
</resources>
